# Lightweight_Hybrid_CNN_And_ConvNeXt-Tiny_IDS_for_IoT_Networks

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
ids_backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  manage.py  package-lock.json  pyproject.toml  requirements.txt
ids_backend/Train/: CICIoT2023_FULL.ipynb  IDS-IOT_model.ipynb
ids_backend/Train/IDS_Checkpoints/: ids_checkpoint.pth
ids_backend/api/: serializers.py  urls.py  views.py
ids_backend/ids_backend/: asgi.py  settings.py  urls.py  views.py  wsgi.py
ids_backend/model/: Hybrid_CNN_ConvNeXtTiny_Final.pth  hybrid_model.py
ids_frontend/: .dockerignore  Dockerfile  README.md  package.json  tailwind.config.js
ids_frontend/src/: App.jsx  index.css
ids_frontend/src/components/Alert/: Alert.jsx
ids_frontend/src/components/Footer/: Footer.jsx
ids_frontend/src/components/Header/: Header.jsx
ids_frontend/src/components/Navbar/: Navbar.jsx
ids_frontend/src/context/: ThemeContext.jsx
ids_frontend/src/hooks/: useMediaQuery.js  useTypingEffect.js
ids_frontend/src/pages/About/: About.jsx
ids_frontend/src/pages/Analytics/: Analytics.jsx
ids_frontend/src/pages/BatchPrediction/: BatchPrediction.jsx
ids_frontend/src/pages/Dashboard/: Dashboard.jsx
ids_frontend/src/pages/Landing/: Landing.jsx
ids_frontend/src/pages/ModelInfo/: ModelInfo.jsx
ids_frontend/src/services/: api.js
ids_frontend_1/: .gitignore  index.html
ids_frontend_1/src/: theme.js
ids_frontend_1/src/components/: Layout.jsx
ids_frontend_1/src/services/: api.js
(+5 files in other folders)
